--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,3 +67,35 @@
 		@apply bg-background text-foreground;
 	}
 }
+
+h1 {
+	@apply scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl;
+}
+
+h2 {
+	@apply scroll-m-20 border-b pb-2 text-3xl font-semibold tracking-tight first:mt-0;
+}
+
+h3 {
+	@apply scroll-m-20 text-2xl font-semibold tracking-tight;
+}
+
+h4 {
+	@apply scroll-m-20 text-xl font-semibold tracking-tight;
+}
+
+p {
+	@apply leading-7 [&:not(:first-child)]:mt-6;
+}
+
+tr {
+	@apply m-0 border-t p-0 even:bg-muted;
+}
+
+th {
+	@apply border px-4 py-2 text-left font-bold [&[align=center]]:text-center [&[align=right]]:text-right;
+}
+
+td {
+	@apply border px-4 py-2 text-left [&[align=center]]:text-center [&[align=right]]:text-right;
+}
